--- a/OpenGL_examples/OpenGL_examples.vcxproj.filters
+++ b/OpenGL_examples/OpenGL_examples.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="glad.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="triangle.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
